front UI progress & translations

--- a/app.json
+++ b/app.json
@@ -35,7 +35,8 @@
         }
       ],
       "expo-localization",
-      "expo-dev-client"
+      "expo-dev-client",
+      "expo-secure-store"
     ],
     "experiments": {
       "typedRoutes": true
