forgot password UI complete

--- a/app.json
+++ b/app.json
@@ -34,6 +34,13 @@
           "backgroundColor": "#ffffff"
         }
       ],
+      [
+        "expo-secure-store",
+        {
+          "configureAndroidBackup": true,
+          "faceIDPermission": "Allow $(PRODUCT_NAME) to access your Face ID biometric data."
+        }
+      ],
       "expo-localization",
       "expo-dev-client",
       "expo-secure-store"
