--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "dependencies": {
     "@animatereactnative/marquee": "^0.5.2",
     "@expo/vector-icons": "^14.0.2",
-    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/cli": "latest",
     "@react-native-community/datetimepicker": "8.2.0",
     "@react-native/gradle-plugin": "^0.75.2",
@@ -27,12 +27,14 @@
     "axios": "^1.8.2",
     "expo": "~52.0.47",
     "expo-blur": "~14.0.3",
-    "expo-constants": "~17.0.5",
+    "expo-constants": "~17.0.8",
     "expo-dev-client": "~5.0.20",
+    "expo-device": "~7.0.3",
     "expo-font": "~13.0.3",
     "expo-haptics": "~14.0.1",
     "expo-linking": "~7.0.5",
     "expo-localization": "~16.0.1",
+    "expo-notifications": "~0.29.14",
     "expo-router": "~4.0.21",
     "expo-secure-store": "~14.0.1",
     "expo-splash-screen": "~0.29.24",
