--- a/app.json
+++ b/app.json
@@ -16,6 +16,8 @@
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
+      "permissions": ["INTERNET", "ACCESS_NETWORK_STATE", "ACCESS_WIFI_STATE"],
+       "usesCleartextTraffic": true,
       "package": "com.livinginatent.piveal"
     },
     "web": {
